--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "17.0.1",
+    "react-eva-icons": "^0.0.8",
+    "react-multi-carousel": "^2.6.1",
+    "sass": "^1.30.0"
   }
 }
