--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "next": "10.0.4",
     "react": "17.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-eva-icons": "^0.0.8",
     "react-multi-carousel": "^2.6.1",
+    "react-toastify": "^6.2.0",
     "sass": "^1.30.0"
   }
 }
