--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-eva-icons": "^0.0.8",
     "react-multi-carousel": "^2.6.1",
+    "react-spinners": "^0.9.0",
     "react-toastify": "^6.2.0",
     "sass": "^1.30.0"
   }
